--- a/Readme.org
+++ b/Readme.org
@@ -4,10 +4,14 @@
 Locally per buffer file you can change in which file the annotations are stored and if there is a top-level heading always inserted. How annotations are formed can also be decided per pajor mode. For example, ~org-annotate-python~ annotates python code definitions (functions, classes or variables). The headlines of these trees can be changed later on, because the annotation itself is identified by its ~CUSTOM_ID~. There is also the possibility to move subtrees and still find the same org-mode item if an annotation is retriggered.  In the annotation file, you can visit the annotated file or the annotated section by ~C-c C-o~ while on the heading of the annotation. 
 
 * Use
-The annotation can be made using a capture template with the function ~org-annotate-code-capture-finding-location~ or with the command ~org-annotate-code-create~. For the capture, do not forget to add a string ~%?~.
+The annotation can be made using a capture template with the function ~org-annotate-code-capture-finding-location~ or with the command ~org-annotate-code-create~. The capture template can look like this
+#+begin_src 
+("a" "Annotate" plain #'org-annotate-code-capture-finding-location "%?" :empty-lines-before 1)
+#+end_src
 
 One can customize ~org-annotate-code~ by always having a top-level heading, either globally or per file, by setting ~org-annotate-code-heading0~. Beyond this, typically the top-level heading is the filename. By default the next level is the line number, but one can use an arbitrary hierarchy per mode or locally, see [[Details][the details]].  One can also customize the annotation file locally by setting ~org-annotation-code-org-file~.
 
+There are annotators that may be written for specific modes. In that case loading them will most likely register them to be used with the capture template. Under the hoos, this is done by modifying the alist described in the details. Other annotators might not register like this.
 * Details
 The top-level heading is set by ~org-annotate-code-heading0~ and is ~nil~ by default. The annotation file is set by ~org-annotation-code-org-file~. How the hierarchy is created can be customized by setting ~org-annotate-code-info-override~. The above three can be buffer local. If the override annotator is not set, per mode annotators in ~org-annotate-code-info-alist~ are used with fallback the default in ~org-annotate-code-info-default~.
 
@@ -23,6 +27,16 @@ The org-mode hierarchy when annotating on a variable definition might look like 
 
 Links are possible by defining a new link type called pydef, eg ~[[pydef:filename.py::newfun.newsubfun.localvariable]]~. When creating an annotation, by default a selection list is presented to the user for what is to be annotated, eg ~newfun~, ~newfun.newsubfun~ or ~newfun.newsubfun.localvariable~. If the user chooses to annotate ~newfun.newsubfun~ then  the annotation will have hierarchy ~filename.py -> newfun -> newfun.newsubfun~. One can customize the levels and what is presented to be selected by changing ~org-annotate-python-squash-annotation-level~ and ~org-annotate-python-squash-candidates-level~, which are ~nil~ by default. 
 
+It is possible to use relative links using projectile. It is also possible to make the heading dotted, as in python modules.
+** org-annotate-dired
+Allows to annotate the file at point in dired. The annotations will still be in ~org-annotate-code-org-file~ and possibly under heading0.
+** org-annotate-word
+This creates a link like ~[[word:filename::lineno::word]] that searches for the word near a line number in a file. This annotator will not update the line numbers if the text is changes, whether by editing or when the file or package was not loaded (think git). See annotation-mode, another package, for live changing the line numbers for this.
+** org-annotate-index
+Allows adding the file name, either the current buffer or the file pointed at in dired, in an ~index.org~ file in the /same/ directory as the file. This does not register an annotator with the ~org-annotate-code-info-alist~. One would add ~org-annotate-index-capture-finding-location~ in a sepratate capure template, as in
+#+begin_src 
+("i" "Insert file to index" plain #'org-annotate-index-capture-finding-location "%?")
+#+end_src
 * Similar Packages
 This section was true at the time of writing (2020-06-24). I can amend or add upon request.
 
