--- a/Readme.org
+++ b/Readme.org
@@ -31,7 +31,7 @@ It is possible to use relative links using projectile. It is also possible to ma
 ** org-annotate-dired
 Allows to annotate the file at point in dired. The annotations will still be in ~org-annotate-code-org-file~ and possibly under heading0.
 ** org-annotate-word
-This creates a link like ~[[word:filename::lineno::word]] that searches for the word near a line number in a file. This annotator will not update the line numbers if the text is changes, whether by editing or when the file or package was not loaded (think git). See annotation-mode, another package, for live changing the line numbers for this.
+This creates a link like ~[[word:filename::lineno::word]] that searches for the word near a line number in a file. This annotator will not update the line numbers if the text is changes, whether by editing or when the file or package was not loaded (think git). See [[https://github.com/bastibe/annotate.el][annotation-mode]], another package, for live changing the line numbers for this.
 ** org-annotate-index
 Allows adding the file name, either the current buffer or the file pointed at in dired, in an ~index.org~ file in the /same/ directory as the file. This does not register an annotator with the ~org-annotate-code-info-alist~. One would add ~org-annotate-index-capture-finding-location~ in a sepratate capure template, as in
 #+begin_src 
@@ -45,7 +45,7 @@ This section was true at the time of writing (2020-06-24). I can amend or add up
  - a function for org-mode capture is provided
  - one can customize the annotation metadata per major-mode
 
-~annotation-mode~ is a useful package that annotates non-destructively files. These annotations are not saved in org-mode, but are loaded globally per session from a storage file. It has some very useful features, eg.
+[[https://github.com/bastibe/annotate.el][annotation-mode]] is a useful package that annotates non-destructively files. These annotations are not saved in org-mode, but are loaded globally per session from a storage file. It has some very useful features, eg.
  - the annotated words or sentences are highlighted with overlays in the annotated file
  - the annotations are identified by exact positions that are updated live when text is changed
 Only if the annotated file was changed when the file was not loaded (think of ~git pull~) or ~annotation-mode~ was not loaded when changes are made, then the annotation in ~annotation-mode~ are found with a nearby search. 
