--- a/Readme.org
+++ b/Readme.org
@@ -1,74 +1,91 @@
 * Description
-~org-annotate-code~ allows you to annotate files so that annotations (comments) are stored in a separate annotation org-mode file. The annotations are in tree hierarchy. By default, the tree at first level is the filename  and at second the line number and word where the annotation is made. All this can be achieved with an ordinary org-capture, but ~org-annotate-code~ allows more customization of how the annotations are stored. 
+~org-annotate-code~ allows you to annotate files in a separate org-mode file. The annotations created are nested headings with the annotation at the deepest node. By default, the first level is the filename and the second is the line number where the annotation is made. However, other annotations are possible according to the annotator that is used. For instance, the second level can be a word in the file at a given position, see ~org-annotate-word~, or for python files the second level can be the python function name where the annotation was made, see ~org-annotate-python~.  The headlines of the trees in the org-file can be changed, and each heading in the annotation is identified by its ~CUSTOM_ID~. In the annotation file, you can visit the annotated file by ~C-c C-o~ on the annotation's heading. Conversely, if you trigger to re-annotate the same section in the file, you will be adding to the already created heading.
 
-Locally per buffer file you can change in which file the annotations are stored and if there is a top-level heading always inserted. How annotations are formed can also be decided per pajor mode. For example, ~org-annotate-python~ annotates python code definitions (functions, classes or variables). The headlines of these trees can be changed later on, because the annotation itself is identified by its ~CUSTOM_ID~. There is also the possibility to move subtrees and still find the same org-mode item if an annotation is retriggered.  In the annotation file, you can visit the annotated file or the annotated section by ~C-c C-o~ while on the heading of the annotation. 
-
+The main way to annotate is by using org-mode's capture function. This package defines at the highest level some capture finding functions that are used in ~org-capture~templates~. 
+Locally for each file you can specify:
+ - in which file the annotations are stored
+ - if there is a custom top-level heading always inserted
+ - which annotator is used with the generic capure function
+You can also specify which annotator to be used by default for each major-mode. If neither a local file annotator is defined nor a major-mode associated annotater, the default annotator will be used. 
 * Use
-To start using, add the folder where it can be found and load it
+To start using, simply load it
 #+begin_src 
 (add-to-list 'load-path "~/path/to/org-annotate-code")
 (require 'org-annotate-code)
 #+end_src
-
-The annotation can be made using a capture template with the function ~org-annotate-code-capture-finding-location~ or with the command ~org-annotate-code-create~. The capture template can look like this
+The annotation can be made using a capture template with the function ~org-annotate-code-capture-finding-location~
 #+begin_src 
-("a" "Annotate" plain #'org-annotate-code-capture-finding-location "%?" :empty-lines-before 1)
+("a" "Annotate" plain #'org-annotate-code-capture-finding-location "%?")
 #+end_src
+Without further configuration, org-capture will use the default annotator.
 
-One can customize ~org-annotate-code~ by always having a top-level heading, either globally or per file, by setting ~org-annotate-code-heading0~. Beyond this, typically the top-level heading is the filename. One can also customize the annotation file locally by setting ~org-annotation-code-org-file~.
-
-There are annotators that may be written for specific modes in separate elisp files. For instance, to annotate python files
+There are annotators for specific modes. For instance, to annotate python files
 #+begin_src 
 (require 'org-annotate-python)
 #+end_src
-The capture mode will then make specific links for python. Under the hood, registering for a major mode is done by modifying an alist as described in the details. Some annotators, like ~org-annotate-index~, will not register with ~org-capture~ like this.
-* Details
-The top-level heading is set by ~org-annotate-code-heading0~ and is ~nil~ by default. The annotation file is set by ~org-annotation-code-org-file~. How the hierarchy is created can be customized by setting ~org-annotate-code-info-override~. The above three can be buffer local. If the override annotator is not set, per mode annotators in ~org-annotate-code-info-alist~ are used with fallback the default in ~org-annotate-code-info-default~.
+This will associate all python files with this annotator when you use the generic capture function above. The capture mode will then make specific links for python, where the first level is the filename in dotted form and the second and deeper levels are nested headings with python function/class/variable names. Registering for a major mode is done by modifying the alist ~org-annotate-code-info-alist~, eg
+#+begin_src 
+(add-to-list 'org-annotate-code-info-alist (cons 'python-mode 'org-annotate-python-info-at-point))
+#+end_src
+will annotate python files with the python annotator. This association is already made when you load ~org-annotate-python~. Not all annotators will register with modes like this. 
 
-Typically, the first level heading is the file name with id link an org-mode file link. There can be arbitrary subnodes defined. For example, the second level heading can be the symbol "word" at point and the id link a search for this symbol by using ~[[file:filename::word]]~.  An annotation is defined as a list of nodes and each node is a plist with keys ~:id~ and ~:heading~ and possibly ~:properties~. An annotator function that defines annotations should return at point such a list. The alist ~org-annotate-code-info-alist~ associates major-modes to such functions. The override annotator and the default is also such a function. Note that the top-level heading is inserted after these annotators have done their work.
+If you want to use word annotations by default then
+#+begin_src 
+(setq org-annotate-code-info-default 'org-annotate-word-info-at-point)
+#+end_src
+will make annotations that point to the word at the position in the file. This annotator defines a new link of type "word". Functions such as ~org-annotate-python-info-at-point~ or ~org-annotate-word-info-at-point~ are at the core of what is an annotator. You can also override the default annotator in ~org-annotate-code-info-default~ with the local variable ~org-annotate-code-info-override~. For this, you will need to know the annotator's function name, eg in a given buffer
+#+begin_src 
+(setq org-annotate-code-info-override 'org-annotate-word-info-at-point)
+#+end_src
+this becomes a local buffer variable. Setting dir-locals.el can make use of different annotators per file.
 
-The custom id properties link back to the annotated section and conversely are used to create new org-mode items when the ids do not exist. Once created, the custom id links should not be changed but the headings can change at will. The whole tree can be moved and/or demoted somewhere else in the annotation file. If an annotation at the same place is triggered, there are two options. Either the moved bottom-level org-mode item is found by its id or a new strict hierarchy of items will be created as before the subtree was moved. To customize which of these two methods is used, see  ~org-annotate-code-search-annotation-method~.  The bottom-up search method is useful because once the original headings and hierachy is created by the annotation functions, later on a better placement of the structure might be decided. It is thus the default. The strict method is useful if one wants to preserve a strict hierarchy upon creation, but it might go against the general principal of unique custom ids in an org-mode file.
+Alternatively, you can remove python from the alist above and use a separate special template for python in the ~org-capture~templates~, eg
+#+begin_src 
+("p" "Python" plain #'org-annotate-python-capture-finding-location "%?")
+#+end_src
+For this, you will need to know the name of the capture finding location. For each annotator there is  one annotator function that can be used with the generic capure finding function and one special capture finding location (which simply wraps the generic function with the override variable).
+
+One can insert a top-level heading, either globally or per file, by setting ~org-annotate-code-heading0~. Beyond this level, typically the top-level heading is the filename, but ultimately this depends on the annotator used. One can also customize the annotation file locally by setting ~org-annotation-code-org-file~. So for instance, each project can save annotations under a different top-level heading in the same file, or in separate files per project, or any combination defined in dir-locals.el.
+
+An annotator that annotates the word at point is defined in ~org-annotate-word~. This creates links that point to a word at a position in a file, and by default clicking on the link takes one to the nearest word at that position. If the minor mode ~org-annotate-live-mode~ is loaded while the annotated file is edited, it will change the ~CUSTOM_ID~ so that the positions are corrected. This is work in progress.
+
+There can be arbitrary nodes of the annotation tree. The annotator functions return a list of nodes and each node is a plist with keys ~:id~ and ~:heading~ and possibly ~:properties~. The top-level heading is inserted after these annotators have done their work. 
+
+Once the annotation is created, the custom id links should not be changed but the headings can change at will. The whole tree can be moved and/or demoted somewhere else in the annotation file. If an annotation at the same place is triggered, there are two options to search for the annotation tree: 
+ - a bottom-top search that places importance on the last custom id to exist
+ - a top-bottom search that places importance on the whole hierarchy of custom ids to exist
+Either the moved entry is found by its id or a new hierarchy of items will be created where the search fails. To customize which of these two methods is used, see  ~org-annotate-code-search-annotation-method~.  
 
 * Annotators
 ** Line numbers
-Use ~org-annotate-code-info-at-point-lineno~. Creates a tree structure like ~file name -> line number~. 
+Creates a tree structure like ~file name -> line number~. This can be achieved out of the box with org-mode.
 ** python
-Use ~org-annotate-code-info-at-point-python~. A variable definition might look like ~file name -> function definition -> local variable~ or ~filename -> global variable~.  
+An annotation might look like the nested headings ~file name -> function definition -> local variable~ or ~filename -> global variable~.  Links are possible by defining a new link type called pydef, eg ~[[pydef:filename.py::newfun.newsubfun.localvariable]]~. 
 
-Links are possible by defining a new link type called pydef, eg ~[[pydef:filename.py::newfun.newsubfun.localvariable]]~. When creating an annotation, by default a selection list is presented to the user for what is to be annotated, eg ~newfun~, ~newfun.newsubfun~ or ~newfun.newsubfun.localvariable~. If the user chooses to annotate ~newfun.newsubfun~ then  the annotation will have hierarchy ~filename.py -> newfun -> newfun.newsubfun~. One can customize the levels and what is presented to be selected by changing ~org-annotate-python-squash-annotation-level~ and ~org-annotate-python-squash-candidates-level~, which are ~nil~ by default. 
+When creating an annotation, the user can select what is to be annotated, eg ~newfun~, ~newfun.newsubfun~ or ~newfun.newsubfun.localvariable~. If the user chooses to annotate ~newfun.newsubfun~ then  the annotation will have hierarchy ~filename.py -> newfun -> newfun.newsubfun~. One can customize these settings by changing ~org-annotate-python-squash-annotation-level~ and ~org-annotate-python-squash-candidates-level~. 
 
-It is possible to use relative links using projectile. It is also possible to make the heading dotted, as in python modules.
+It is possible to use relative path headings using projectile. Filename headings are dotted by default as in python modules.
+
 ** dired
 Use ~org-annotate-code-info-at-point-dired~.
 Allows to annotate the file at point in dired. The annotations will still be in ~org-annotate-code-org-file~ and under the top-level heading if set.
 ** word
-Use ~org-annotate-code-info-at-point-word~.
-This creates a link like ~[[word:filename::lineno::word]]~ that searches for the word near a line number in a file. 
+This creates a link like ~[[word:filename::position::word]]~ that searches for the word near a line number in a file. 
 
-This annotator will keep track of line numbers changes if the text is changed while ~org-annotate-live-mode~ is loaded. It will change the org-file accordingly when:
+This annotator will keep track of line numbers changes if the text is changed while ~org-annotate-live-mode~ is loaded. It will change the org-file accordingly each time
  - The file is saved
  - The user calls ~org-annotate-live-sync-register~
- - A new annotation might overlap with an existing annotate whose link is old.
- - An existing annotation will be edited and its link is old.
-However, if you use the live mode, currently, link ids will be renamed to stale if the file changed while ~org-annotate-live-mode~ was not loaded. The live mode is still experimental. Ways to correct stale links will be added. You can also checkout [[https://github.com/bastibe/annotate.el][annotation-mode]], another package, for live changing the line numbers as text is edited.
+ - A new annotation is made
+However, if you use the live mode, currently, link ids will be renamed to stale if the file changed while ~org-annotate-live-mode~ was not loaded. The live mode is still experimental.
+
+You can also checkout [[https://github.com/bastibe/annotate.el][annotation-mode]], a maturer project, for live changing the line numbers as text is edited.
 ** index
 Use ~org-annotate-code-info-at-point-index~. 
-Allows adding the file name, either the current buffer or the file pointed at in dired, in an ~index.org~ file in the /same/ directory as the file. This does not register an annotator with the ~org-annotate-code-info-alist~. One would add ~org-annotate-index-capture-finding-location~ in a sepratate capure template, as in
+Allows adding the file name, either the current buffer or the file pointed at in dired, in an ~index.org~ file in the /same/ directory as the file. That is ~org-annotate-code-org-file~ or the top-level heading is not used here. This does not register an annotator with the ~org-annotate-code-info-alist~. One would add ~org-annotate-index-capture-finding-location~ in a sepratate capure template, as in
 #+begin_src 
 ("i" "Insert file to index" plain #'org-annotate-index-capture-finding-location "%?")
 #+end_src
 * Similar Packages
-This section was true at the time of writing (2020-06-24). I can amend or add upon request.
-
-~org-annotate-file~ is similar, but ~org-annotate-code~ allows more configuration
- - the links are in custom id properties instead so headings can change at will
- - a function for org-mode capture is provided
- - one can customize the annotation metadata per major-mode
-
-[[https://github.com/bastibe/annotate.el][annotation-mode]] is a useful package that annotates non-destructively files. These annotations are not saved in org-mode, but are loaded globally per session from a storage file. It has some very useful features, eg.
- - the annotated words or sentences are highlighted with overlays in the annotated file
- - the annotations are identified by exact positions that are updated live when text is changed
-Only if the annotated file was changed when the file was not loaded (think of ~git pull~) or ~annotation-mode~ was not loaded when changes are made, then the annotation in ~annotation-mode~ are found with a nearby search. 
-
-* Ideas
-This package is work in progress. Currently thinking of making the live mode correct stale links with git. 
+If you know of similar packages, please let me know
+ - ~org-annotate-file~ is similar, but ~org-annotate-code~ is presently configurable
+ - [[https://github.com/bastibe/annotate.el][annotation-mode]] is a useful package that annotates non-destructively files.
